--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ document.createElement('content');
 			</ul>					
 		</aside>
 			<a href="about.php"><img src="img/kot.jpg" title="Личная страничка Николая Стрижаченко" alt="Личная страничка Николая Стрижаченко" style="width:450px;height:450px" /></a>
+			<h1><a href="about.php" title="Личная страничка электромонтёра" alt="Личная страничка электромонтёра">Электромонтёр</a></h1>
 		</main>	
 	</content>
 	<footer>
